// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAllThemes > スナップショット — 全テーマ 1`] = `
"/* Design System Tokens — All Themes */
/* Auto-generated by export-css.ts. Do not edit manually. */
/* Generated at: 2024-01-01T00:00:00.000Z */

/* Usage: <html data-theme="mono"> or <html data-theme="kawaii"> */
/* JS:     document.documentElement.setAttribute('data-theme', 'kawaii') */

/* ---- Mono ---- */
:root,
[data-theme="mono"] {
  --ds-color-black: #0A0A0A;
  --ds-color-gray900: #111111;
  --ds-color-gray800: #1C1C1C;
  --ds-color-gray700: #2E2E2E;
  --ds-color-gray600: #444444;
  --ds-color-gray500: #737373;
  --ds-color-gray400: #A3A3A3;
  --ds-color-gray300: #D4D4D4;
  --ds-color-gray200: #E5E5E5;
  --ds-color-gray100: #F5F5F5;
  --ds-color-white: #FAFAFA;
  --ds-color-accent: #C8FF00;
  --ds-color-accent-hover: #B3E600;

  --ds-font-display: 'DM Serif Display', Georgia, serif;
  --ds-font-sans: 'DM Sans', Helvetica, sans-serif;
  --ds-font-mono: 'IBM Plex Mono', 'Courier New', monospace;

  --ds-scale-xs: 4px;
  --ds-scale-sm: 8px;
  --ds-scale-md: 16px;
  --ds-scale-lg: 24px;
  --ds-scale-xl: 40px;
  --ds-scale-2xl: 64px;
  --ds-scale-3xl: 104px;

  --ds-radius-none: 0px;
  --ds-radius-sm: 4px;
  --ds-radius-md: 8px;
  --ds-radius-lg: 12px;
  --ds-radius-full: 9999px;

  --ds-font-import: url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=DM+Sans:wght@300;400;500&family=IBM+Plex+Mono:wght@400;600&display=swap');
}

/* ---- Kawaii ✿ ---- */
[data-theme="kawaii"] {
  --ds-color-black: #2D1B3D;
  --ds-color-gray900: #3D2550;
  --ds-color-gray800: #5C3D6E;
  --ds-color-gray700: #7D5A8A;
  --ds-color-gray600: #9E78AA;
  --ds-color-gray500: #BF9FCB;
  --ds-color-gray400: #D4BCE0;
  --ds-color-gray300: #E8D8F0;
  --ds-color-gray200: #F3EAF8;
  --ds-color-gray100: #FAF5FD;
  --ds-color-white: #FEFAFF;
  --ds-color-accent: #FF6EB4;
  --ds-color-accent-hover: #FF4DA6;

  --ds-font-display: 'Nunito', 'Arial Rounded MT Bold', sans-serif;
  --ds-font-sans: 'Quicksand', 'Trebuchet MS', sans-serif;
  --ds-font-mono: 'Space Mono', monospace;

  --ds-scale-xs: 4px;
  --ds-scale-sm: 8px;
  --ds-scale-md: 16px;
  --ds-scale-lg: 24px;
  --ds-scale-xl: 40px;
  --ds-scale-2xl: 64px;
  --ds-scale-3xl: 104px;

  --ds-radius-none: 0px;
  --ds-radius-sm: 12px;
  --ds-radius-md: 20px;
  --ds-radius-lg: 28px;
  --ds-radius-full: 9999px;

  --ds-font-import: url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Quicksand:wght@400;500;600&family=Space+Mono:wght@400;700&display=swap');
}
"
`;

exports[`buildSingleTheme > スナップショット — kawaii 1`] = `
"/* Design System Tokens — Kawaii ✿ */
/* Auto-generated by export-css.ts. Do not edit manually. */
/* Generated at: 2024-01-01T00:00:00.000Z */

:root {
  --ds-color-black: #2D1B3D;
  --ds-color-gray900: #3D2550;
  --ds-color-gray800: #5C3D6E;
  --ds-color-gray700: #7D5A8A;
  --ds-color-gray600: #9E78AA;
  --ds-color-gray500: #BF9FCB;
  --ds-color-gray400: #D4BCE0;
  --ds-color-gray300: #E8D8F0;
  --ds-color-gray200: #F3EAF8;
  --ds-color-gray100: #FAF5FD;
  --ds-color-white: #FEFAFF;
  --ds-color-accent: #FF6EB4;
  --ds-color-accent-hover: #FF4DA6;

  --ds-font-display: 'Nunito', 'Arial Rounded MT Bold', sans-serif;
  --ds-font-sans: 'Quicksand', 'Trebuchet MS', sans-serif;
  --ds-font-mono: 'Space Mono', monospace;

  --ds-scale-xs: 4px;
  --ds-scale-sm: 8px;
  --ds-scale-md: 16px;
  --ds-scale-lg: 24px;
  --ds-scale-xl: 40px;
  --ds-scale-2xl: 64px;
  --ds-scale-3xl: 104px;

  --ds-radius-none: 0px;
  --ds-radius-sm: 12px;
  --ds-radius-md: 20px;
  --ds-radius-lg: 28px;
  --ds-radius-full: 9999px;

  --ds-font-import: url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Quicksand:wght@400;500;600&family=Space+Mono:wght@400;700&display=swap');
}
"
`;

exports[`buildSingleTheme > スナップショット — mono 1`] = `
"/* Design System Tokens — Mono */
/* Auto-generated by export-css.ts. Do not edit manually. */
/* Generated at: 2024-01-01T00:00:00.000Z */

:root {
  --ds-color-black: #0A0A0A;
  --ds-color-gray900: #111111;
  --ds-color-gray800: #1C1C1C;
  --ds-color-gray700: #2E2E2E;
  --ds-color-gray600: #444444;
  --ds-color-gray500: #737373;
  --ds-color-gray400: #A3A3A3;
  --ds-color-gray300: #D4D4D4;
  --ds-color-gray200: #E5E5E5;
  --ds-color-gray100: #F5F5F5;
  --ds-color-white: #FAFAFA;
  --ds-color-accent: #C8FF00;
  --ds-color-accent-hover: #B3E600;

  --ds-font-display: 'DM Serif Display', Georgia, serif;
  --ds-font-sans: 'DM Sans', Helvetica, sans-serif;
  --ds-font-mono: 'IBM Plex Mono', 'Courier New', monospace;

  --ds-scale-xs: 4px;
  --ds-scale-sm: 8px;
  --ds-scale-md: 16px;
  --ds-scale-lg: 24px;
  --ds-scale-xl: 40px;
  --ds-scale-2xl: 64px;
  --ds-scale-3xl: 104px;

  --ds-radius-none: 0px;
  --ds-radius-sm: 4px;
  --ds-radius-md: 8px;
  --ds-radius-lg: 12px;
  --ds-radius-full: 9999px;

  --ds-font-import: url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=DM+Sans:wght@300;400;500&family=IBM+Plex+Mono:wght@400;600&display=swap');
}
"
`;
